# stm32-sandbox

./: Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config
src/: main.rs
