[package]
authors = ["Łukasz Kostka"]
edition = "2018"
readme = "README.md"
name = "sandbox"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
stm32f1 = "0.8.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
cortex-m-rt-ld = "0.1.1"

[dependencies.stm32f1xx-hal]
version = "0.4.0"
features = ["stm32f103", "rt"]


[profile.release]
# optimize for size ('z' would optimize even more)
opt-level = 's'
codegen-units = 1
debug = false
lto = true
